# project-scaffolding

./: .cursorignore  .cursorrules  .env.example  .gitignore  .scaffolding-version  00_Index_project-scaffolding.md  AGENTS.md  AGENT_OS_REFACTORING_TODO.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_REVIEW_v2.md  CODE_REVIEW_CLAUDE_OPUS_v1.md  CODE_REVIEW_CLAUDE_v1.md  CONTINUAL_LEARNING_ARCHITECTURE.md  DECISIONS.md  DNA_SECURITY_AUDIT.md  EXTERNAL_RESOURCES.md  EXTERNAL_RESOURCES.yaml  GEMINI_RESEARCH_PROMPT.md  GEN_MANIFEST_USAGE.md  PRD.md  PROJECT_PHILOSOPHY.md  QUICKSTART.md  README.md  REVIEW.md  REVIEWS_AND_GOVERNANCE_PROTOCOL.md  THE_ULTIMATE_AUDIT.md  TODO.md  claude code cli-web suggestions.md  local ai integration.md  local-ai-integration.md  more cost saving.md  more info about AWS.md  passing_projects.txt  pyproject.toml  pytest.ini  repomix-output.xml  requirements.txt  review_recommendations_from_Claude_Code.web  scaffold-20-projects-prompt.md  (+3 more)
.agentsync/: README.md
Documents/: BACKUP_AUDIT.md  CLAUDE_CODE_REVIEW_ACTIONS.md  CODE_QUALITY_STANDARDS.md  CODE_REVIEW_PROMPT.md  DEEPSEEK_SETUP.md  DOGFOODING_TEST.md  EPIC_DAY_SUMMARY_2025-12-23.md  EXTERNAL_RESOURCES.md  FREE_CREDITS_GUIDE.md  GOLD_STANDARD_DEFINITION.md  KIRO_DEEP_DIVE.md  KIRO_INTEGRATION.md  MODEL_COST_COMPARISON.md  PATTERN_ANALYSIS.md  PROJECT_INDEXING_SYSTEM.md  PROJECT_INDEX_ENFORCEMENT.md  PROJECT_KICKOFF_GUIDE.md  PROJECT_PHILOSOPHY.md  PROJECT_STRUCTURE_STANDARDS.md  README.md  REVIEWS_AND_GOVERNANCE_PROTOCOL.md  REVIEW_PROCESS_RECOMMENDATIONS.md  REVIEW_SYSTEM_DESIGN.md  USAGE_GUIDE.md  (+2 more)
(+318 files in other folders)
